# monty

./: CLAUDE.md  Cargo.toml  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  codspeed.yml
crates/fuzz/fuzz_targets/: string_input_panic.rs  tokens_input_panic.rs
crates/monty/: Cargo.toml  README.md
crates/monty-bench/: Cargo.toml
crates/monty-cpython/: Cargo.toml  README.md
crates/monty-cpython/src/: pyexec.rs  session.rs
crates/monty-datatest/: Cargo.toml
crates/monty-datatest/src/: main.rs
crates/monty-fs/src/: dispatch.rs
crates/monty-js/: README.md  native-addon.d.ts  package-lock.json  package.json
crates/monty-js/__test__/: async.spec.ts  external.spec.ts  feed_start.spec.ts  limits.spec.ts  mount.spec.ts  pool.spec.ts  print.spec.ts  type_check.spec.ts  wasm_async.spec.ts  wasm_external.spec.ts  wasm_mount.spec.ts
crates/monty-js/smoke-test/: test.ts
crates/monty-js/src/: limits.rs  monty_cls.rs  pool.rs
crates/monty-js/ts/: errors.ts  index.ts  native.ts  node.ts  pool.ts  print.ts  session.ts  wasm.ts
crates/monty-js/ts/worker/: index.ts  transport.ts
crates/monty-pool/src/: checkout.rs  lib.rs
crates/monty-pool/tests/: pool_test.rs  websocket.rs
crates/monty-proto/: Cargo.toml  README.md
crates/monty-proto/proto/monty/v1/: monty.proto
crates/monty-proto/src/: frame.rs  lib.rs  worker.rs
crates/monty-proto/src/convert/: exception.rs  limits.rs  os_call.rs  resume.rs
crates/monty-proto/src/python/: convert.rs  dataclass.rs  exceptions.rs  mod.rs
crates/monty-proto/tests/: dispatch.rs  roundtrip.rs
crates/monty-proto/tests/oracle/: monty.v1.rs
crates/monty-python/: Cargo.toml  README.md  example.py  pyproject.toml
crates/monty-python/python/pydantic_monty/: __init__.py  _monty.pyi
crates/monty-python/src/: async_dispatch.rs  build.rs  convert.rs  dataclass.rs  exceptions.rs  external.rs  lib.rs  limits.rs  mount.rs  pool.rs  print_target.rs  snapshot.rs
crates/monty-python/tests/: conftest.py  test_async.py  test_dataclasses.py  test_exceptions.py  test_external.py  test_external_async.py  test_feed_start.py  test_inputs.py  test_limits.py  test_pool.py  test_print.py  test_repl.py  test_threading.py  test_type_check.py  test_types.py  test_websocket.py
crates/monty-runtime/: Cargo.toml  README.md
crates/monty-runtime/src/: main.rs  subprocess.rs
crates/monty-type-checking/: Cargo.toml
crates/monty-type-checking/src/: db.rs  type_check.rs
crates/monty-type-checking/tests/: main.rs
crates/monty-type-checking/tests/snapshots/: main__reveal_types.snap  main__type_bad_types.snap
crates/monty-types/src/: builtins.rs  file_mode.rs  io.rs  lib.rs  object.rs  resource.rs
crates/monty-wasm-runtime/: Cargo.toml
crates/monty-wasm-runtime/src/: lib.rs
crates/monty/src/: exception_private.rs  exception_public.rs  expressions.rs  function.rs  hash.rs  heap.rs  heap_data.rs  intern.rs  lib.rs  name_map.rs  object.rs  object_bridge.rs  os.rs  parse.rs  prepare.rs  repl.rs  resource.rs  resource_checks.rs  run.rs  run_progress.rs  sorting.rs  source_map.rs  string_builder.rs  stringize.rs  value.rs
crates/monty/src/builtins/: all.rs  any.rs  enumerate.rs  filter.rs  map.rs  min_max.rs  reversed.rs  sorted.rs  sum.rs  zip.rs
crates/monty/src/bytecode/: builder.rs  compiler.rs  op.rs
crates/monty/src/bytecode/vm/: async_exec.rs  call.rs  collections.rs  compare.rs  exceptions.rs  mod.rs  recursion.rs
crates/monty/src/heap/: stable_heap.rs
crates/monty/src/modules/: mod.rs  sys.rs
crates/monty/src/modules/json/: dump.rs  load.rs
crates/monty/src/types/: bytes.rs  dataclass.rs  date.rs  datetime.rs  dict.rs  dict_view.rs  file.rs  instance.rs  iter.rs  list.rs  long_int.rs  namedtuple.rs  path.rs  py_trait.rs  range.rs  re_match.rs  re_pattern.rs  set.rs  slice.rs  str.rs  test_cm.rs  timedelta.rs  timezone.rs  tuple.rs  type.rs
crates/monty/test_cases/: async__transitive_closure.py  class__annotations.py  closure__multi_hop_capture.py  closure__transitive.py  comprehension__scope.py  ext_call__in_closure.py  global__error_assigned_before.py  import__future_unknown_feature.py  import__relative_future_error.py  int__bigint.py  iter__for.py  json__dumps_recursion.py  json__loads_invalid_messages.py  name_error__undefined_global_in_function.py  open__fs.py  recursion__deep_repr.py  recursion__instance_repr.py  recursion__limit_depth.py  recursion__nested_eval.py  refcount__class.py  refcount__with_class.py  try_except__all.py
crates/monty/tests/: async_memory_limits.rs  inputs.rs  json_error_data.rs  json_serde.rs  main.rs  os_tests.rs  parse_errors.rs  print_collect_limits.rs  print_writer.rs  repl.rs  resource_limits.rs  security.rs
examples/expense_analysis/: main.py
examples/sql_playground/: main.py
examples/web_scraper/: main.py
limitations/: classes.md  comprehensions.md  iter.md  json.md  language.md  open.md  pool-architecture.md  print.md  resource_limits.md  sys.md  typing.md  with.md
scripts/: run_nasty_code.py
