[package]
name = "monty-bench"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Benchmarks for the Monty interpreter — compares Monty vs CPython"
publish = false

[dependencies]
monty = { workspace = true, features = ["test-hooks"] }
monty-pool = { workspace = true }
pyo3 = { workspace = true, features = ["auto-initialize"] }
codspeed-criterion-compat = "4.2.1"
criterion = "0.5"

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[build-dependencies]
pyo3-build-config = { workspace = true }

[[bench]]
name = "main"
harness = false

[[bench]]
name = "pool"
harness = false

[lints]
workspace = true
