[package]
name = "monty-wasm-runtime"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = "Lean wasip1 worker module: drives a Monty protocol child one turn per call, over WASI stdio."
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
# A WASI reactor (no `main`): the host calls the exported `monty_dispatch_turn`
# once per protocol turn and keeps the instance (and its session state) alive
# between turns.
crate-type = ["cdylib"]

[dependencies]
monty-proto = { workspace = true, features = ["worker"] }
prost = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
